--- a/static/module/vipreturnbook.html
+++ b/static/module/vipreturnbook.html
@@ -19,6 +19,19 @@
             text-align: center;
         }
 
+        .book-info-show {
+            display: flex;
+        }
+
+        .book-info-show .img img {
+            width: 180px;
+            height: 220px;
+        }
+
+        .book-info-show .content {
+            flex: 1;
+        }
+
     </style>
 </head>
 <body>
@@ -33,36 +46,39 @@
     </div>
     <div id="book-case-dialog" class="dialog-context-width" style="display:  none">
         <div class="dialog-context-show">
-
-            
-
-
-            <form class="form-horizontal">
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">书名</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control name" placeholder="书名">
-                    </div>
+            <div class="book-info-show">
+                <div class="img">
+                    <img src="../img/head.jpg" alt="">
                 </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">条形码</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control library_id" placeholder="条形码">
-                    </div>
+                <div class="content">
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">书名</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control name" placeholder="书名">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">条形码</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control library_id" placeholder="条形码">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">isbn13</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control isbn13" placeholder="isbn13">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">isbn10</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control isbn10" placeholder="isbn10">
+                            </div>
+                        </div>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">isbn13</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control isbn13" placeholder="isbn13">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">isbn10</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control isbn10" placeholder="isbn10">
-                    </div>
-                </div>
-            </form>
+            </div>
         </div>
         <div class="absolute-dialog-action">
             <button type="button" class="btn btn-primary" id="post-btn">确认提交</button>
