--- a/static/module/vipmanage.html
+++ b/static/module/vipmanage.html
@@ -179,7 +179,11 @@
                     <div class="form-group">
                         <label class="col-sm-3 control-label">性别</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control r_sex" placeholder="昵称">
+                            <select class="form-control r_sex">
+                                <option value="1">男</option>
+                                <option value="0">女</option>
+                            </select>
+                            <!--<input type="text" class="form-control " placeholder="昵称">-->
                         </div>
                     </div>
 
