修改页面的简单逻辑

--- a/app/index.html
+++ b/app/index.html
@@ -325,9 +325,9 @@
                     <a href="../static/module/vipreturnbook.html" target="contextIframe">会员还书</a>
                     <a href="../static/module/bookmanage.html" target="contextIframe">图书入库</a>
                     <a href="../static/module/bookcase.html" target="contextIframe">书架填写</a>
-                    <a href="../static/module/vipmanage.html" target="contextIframe">会员管理</a>
+                    <!--<a href="../static/module/vipmanage.html" target="contextIframe">会员管理</a>-->
                     <a href="../static/module/activitycenter.html" target="contextIframe">活动中心</a>
-                    <a href="../static/module/usermanage.html" target="contextIframe">系统管理</a>
+                    <!--<a href="../static/module/usermanage.html" target="contextIframe">系统管理</a>-->
                 </div>
             </div>
             <div class="per-info">
