--- a/static/module/vipmanage.html
+++ b/static/module/vipmanage.html
@@ -153,7 +153,7 @@
                     <div class="form-group">
                         <label class="col-sm-3 control-label">会员编号</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control reader_id" placeholder="会员编号">
+                            <input type="text" class="form-control reader_id" disabled placeholder="会员编号">
                         </div>
                     </div>
                     <div class="form-group">
