删除不必要的提示语

--- a/static/module/activitycenter.html
+++ b/static/module/activitycenter.html
@@ -45,9 +45,13 @@
     <div class="left-nav">
         <div class="list-group">
             <a href="#" class="list-group-item active" data-activity="1">活动中心</a>
-            <a href="#" class="list-group-item" data-activity="2">知识分享</a>
-            <a href="#" class="list-group-item" data-activity="3">加入我们</a>
-            <a href="#" class="list-group-item" data-activity="4">关于我们</a>
+            <a href="#" class="list-group-item" data-activity="2">加速阅读</a>
+            <a href="#" class="list-group-item" data-activity="3">蓝思阅读</a>
+            <a href="#" class="list-group-item" data-activity="4">知识分享</a>
+            <a href="#" class="list-group-item" data-activity="5">加入我们</a>
+            <a href="#" class="list-group-item" data-activity="6">常见问题</a>
+            <a href="#" class="list-group-item" data-activity="7">合作伙伴</a>
+            <a href="#" class="list-group-item" data-activity="8">关于我们</a>
         </div>
     </div>
     <div class="right-content">
