删除不必要的提示语

--- a/static/module/vipmanage.html
+++ b/static/module/vipmanage.html
@@ -135,8 +135,7 @@
 <body>
 <div id="vip-manage-dialog" class="dialog-context-width">
     <div class="form-group">
-        <label class="col-sm-2 control-label">条形码/手机会员号</label>
-        <div class="col-sm-8">
+        <div class="col-sm-10">
             <input type="text" class="form-control vip-number" placeholder="条形码/手机会员号">
         </div>
         <div class="col-sm-2">
@@ -172,7 +171,7 @@
                     <div class="form-group">
                         <label class="col-sm-3 control-label">姓名</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control r_name" placeholder="昵称">
+                            <input type="text" class="form-control r_name" placeholder="姓名">
                         </div>
                     </div>
 
