--- a/static/module/bookmanage.html
+++ b/static/module/bookmanage.html
@@ -51,34 +51,21 @@
         <div class="dialog-context-show">
             <form class="form-horizontal">
                 <div class="form-group">
-                    <label class="col-sm-1 control-label">条形码</label>
-                    <div class="col-sm-9">
+                    <div class="col-sm-10">
                         <input type="text" class="form-control book-isbn" placeholder="条形码">
                     </div>
-                    <button type="button" class="btn btn-primary">查询条形码</button>
+                    <button type="button" class="btn btn-primary" id="search-isbn">查询条形码</button>
                     <button type="button" class="btn btn-primary" id="post-scheme-btn">确认</button>
-                    <!--<button type="button" class="btn btn-success" id="add-book-library">新增书籍</button>-->
                 </div>
-                <!--<div class="form-group library-id" style="display: none">
-                    <label class="col-sm-1 control-label">图书条纹</label>
-                    <div class="col-sm-9">
-                        <input type="text" class="form-control book-library" placeholder="图书条纹">
-                    </div>
-                    <span class="glyphicon glyphicon-remove span-icon-cursor span-red remove"></span>
-                </div>-->
-
-
                 <div class="gn-title">书籍信息</div>
                 <div class="form-group">
-                    <label class="col-sm-1 control-label">书籍条形码</label>
+                    <label class="col-sm-1 control-label">书籍条形码：</label>
                     <div class="col-sm-11" id="all-stripe">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-1 control-label">书名</label>
                     <div class="col-sm-1">
                         <img src="../img/head.jpg" class="book-img" alt="">
-                        <!-- <input type="text" class="form-control name" placeholder="书名">-->
                     </div>
                     <label class="col-sm-1 control-label">书名</label>
                     <div class="col-sm-3">
@@ -177,7 +164,7 @@
                     <div class="col-sm-5">
                         <textarea class="form-control introduction" rows="3"></textarea>
                     </div>
-                    <label class="col-sm-1 control-label">内容简介</label>
+                    <label class="col-sm-1 control-label">所涉话题</label>
                     <div class="col-sm-5">
                         <textarea class="form-control topic" rows="3"></textarea>
                     </div>
@@ -256,19 +243,19 @@
                 <div class="form-group">
                     <label class="col-sm-1 control-label">AR标签</label>
                     <div class="col-sm-2">
-                        <input type="text" class="form-control artag" placeholder="内部使用">
+                        <input type="text" class="form-control artag" placeholder="AR标签">
                     </div>
                     <label class="col-sm-1 control-label">蓝思标签</label>
                     <div class="col-sm-2">
-                        <input type="text" class="form-control lexileTag" placeholder="内部使用">
+                        <input type="text" class="form-control lexileTag" placeholder="蓝思标签">
                     </div>
                     <label class="col-sm-1 control-label">蓝思代码</label>
                     <div class="col-sm-2">
-                        <input type="text" class="form-control lexileCode" placeholder="内部使用">
+                        <input type="text" class="form-control lexileCode" placeholder="蓝思代码">
                     </div>
                     <label class="col-sm-1 control-label">蓝思值</label>
                     <div class="col-sm-2">
-                        <input type="text" class="form-control lexileValue" placeholder="内部使用">
+                        <input type="text" class="form-control lexileValue" placeholder="蓝思值">
                     </div>
                 </div>
 
