--- a/static/module/vipreturnbook.html
+++ b/static/module/vipreturnbook.html
@@ -55,25 +55,25 @@
                         <div class="form-group">
                             <label class="col-sm-3 control-label">书名</label>
                             <div class="col-sm-9">
-                                <input type="text" class="form-control name" placeholder="书名">
+                                <input type="text" class="form-control name" placeholder="书名" disabled>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-3 control-label">条形码</label>
                             <div class="col-sm-9">
-                                <input type="text" class="form-control library_id" placeholder="条形码">
+                                <input type="text" class="form-control library_id" placeholder="条形码" disabled>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-3 control-label">isbn13</label>
                             <div class="col-sm-9">
-                                <input type="text" class="form-control isbn13" placeholder="isbn13">
+                                <input type="text" class="form-control isbn13" placeholder="isbn13" disabled>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-3 control-label">isbn10</label>
                             <div class="col-sm-9">
-                                <input type="text" class="form-control isbn10" placeholder="isbn10">
+                                <input type="text" class="form-control isbn10" placeholder="isbn10" disabled>
                             </div>
                         </div>
                     </form>
