--- a/static/module/bookmanage.html
+++ b/static/module/bookmanage.html
@@ -42,12 +42,15 @@
             height: 150px;
         }
 
+        #img-dention {
+            margin-top: 4%;
+        }
+
     </style>
 </head>
 <body>
 <div class="book-manage">
-    <!--<button type="button" class="btn btn-primary" id="search-book">查询书籍</button>-->
-    <div id="search-book-dialog" class="dialog-context-width"> <!--style="display: none"-->
+    <div id="search-book-dialog" class="dialog-context-width">
         <div class="dialog-context-show">
             <form class="form-horizontal">
                 <div class="form-group">
@@ -67,17 +70,19 @@
                     <div class="col-sm-1">
                         <img src="../img/head.jpg" class="book-img" alt="">
                     </div>
-                    <label class="col-sm-1 control-label">书名</label>
-                    <div class="col-sm-3">
-                        <input type="text" class="form-control name" placeholder="书名">
-                    </div>
-                    <label class="col-sm-1 control-label">ISBN13</label>
-                    <div class="col-sm-2">
-                        <input type="text" class="form-control iSBN13" placeholder="ISBN13">
-                    </div>
-                    <label class="col-sm-1 control-label">ISBN10</label>
-                    <div class="col-sm-2">
-                        <input type="text" class="form-control iSBN10" placeholder="ISBN10">
+                    <div class="col-sm-11" id="img-dention">
+                        <label class="col-sm-1 control-label">书名</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control name" placeholder="书名">
+                        </div>
+                        <label class="col-sm-1 control-label">ISBN13</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control iSBN13" placeholder="ISBN13">
+                        </div>
+                        <label class="col-sm-1 control-label">ISBN10</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control iSBN10" placeholder="ISBN10">
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
