--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/x-icon" href="../static/img/iconimage.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../static/img/icon.png">
     <link rel="stylesheet" type="text/css" href="../spm_modules/bootstrap-3.3.0-dist/dist/css/bootstrap.min.css">
     <link href="../static/header.css" rel="stylesheet" type="text/css">
     <script src="../spm_modules/jquery/jquery-3.1.1.min.js" type="text/javascript"></script>
@@ -327,7 +327,7 @@
                     <a href="../static/module/bookcase.html" target="contextIframe">书架填写</a>
                     <!--<a href="../static/module/vipmanage.html" target="contextIframe">会员管理</a>-->
                     <a href="../static/module/activitycenter.html" target="contextIframe">栏目编辑</a>
-                    <!--<a href="../static/module/usermanage.html" target="contextIframe">系统管理</a>-->
+                    <a href="../static/module/imagemanage.html" target="contextIframe">主页图片</a>
                 </div>
             </div>
             <div class="per-info">
