--- a/app/index.html
+++ b/app/index.html
@@ -317,7 +317,7 @@
     <header id="header">
         <div id="headMain">
             <div class="cp-word">
-                <div class="companyName"><span class="company-name">美原少儿英文图书馆</span></div>
+                <div class="companyName"><span class="company-name">美原英文图书馆</span></div>
             </div>
             <div class="sys-menu">
                 <div class="nav-menu">
@@ -325,14 +325,13 @@
                     <a href="../static/module/vipreturnbook.html" target="contextIframe">会员还书</a>
                     <a href="../static/module/bookmanage.html" target="contextIframe">图书入库</a>
                     <a href="../static/module/bookcase.html" target="contextIframe">书架填写</a>
-                    <!--<a href="../static/module/vipmanage.html" target="contextIframe">会员管理</a>-->
                     <a href="../static/module/activitycenter.html" target="contextIframe">栏目编辑</a>
                     <a href="../static/module/imagemanage.html" target="contextIframe">主页图片</a>
                 </div>
             </div>
             <div class="per-info">
                 <span id="user-info">
-                        <img src="../static/img/head.jpg" class="user-photo">
+                        <img src="../static/img/icon.png" class="user-photo">
                 </span>
             </div>
         </div>
