--- a/app/login.html
+++ b/app/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>美原</title>
+    <title>美原英文图书馆</title>
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/x-icon" href="../static/img/icon.png">
     <link href="../spm_modules/bootstrap-3.3.0-dist/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
