图书管理系统

--- a/static/module/imagemanage.html
+++ b/static/module/imagemanage.html
@@ -59,7 +59,14 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label">新闻链接</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control news-url" placeholder="新闻链接">
+                        <select class="form-control news-url">
+                            <option value="speedReading">AR阅读知识</option>
+                            <option value="leixiReading">蓝思阅读知识</option>
+                            <option value="knowlwdgeShare">阅读课程</option>
+                            <option value="commonQuestion">常见问题</option>
+                            <option value="partners">合作伙伴</option>
+                            <option value="joinUs">加入我们</option>
+                        </select>
                     </div>
                 </div>
             </form>
