--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/x-icon" href="../static/img/icon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../static/img/icon.jpg">
     <link rel="stylesheet" type="text/css" href="../spm_modules/bootstrap-3.3.0-dist/dist/css/bootstrap.min.css">
     <link href="../static/header.css" rel="stylesheet" type="text/css">
     <script src="../spm_modules/jquery/jquery-3.1.1.min.js" type="text/javascript"></script>
@@ -302,6 +302,11 @@
         #adv-show:hover {
             background: #2293e4;
         }
+
+        .company-name img {
+            width: 166px;
+            height: 50px;
+        }
     </style>
 </head>
 <body>
@@ -317,7 +322,7 @@
     <header id="header">
         <div id="headMain">
             <div class="cp-word">
-                <div class="companyName"><span class="company-name">美原英文图书馆</span></div>
+                <div class="companyName"><span class="company-name"><img src="../static/img/3.png" alt=""></span></div>
             </div>
             <div class="sys-menu">
                 <div class="nav-menu">
@@ -331,7 +336,7 @@
             </div>
             <div class="per-info">
                 <span id="user-info">
-                        <img src="../static/img/icon.png" class="user-photo">
+                        <img src="../static/img/icon.jpg" class="user-photo">
                 </span>
             </div>
         </div>
