--- a/app/login.html
+++ b/app/login.html
@@ -3,7 +3,7 @@
 <head>
     <title>美原英文图书馆</title>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/x-icon" href="../static/img/icon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../static/img/icon.jpg">
     <link href="../spm_modules/bootstrap-3.3.0-dist/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="../static/header.css" rel="stylesheet" type="text/css">
     <script src="../spm_modules/jquery/jquery-3.1.1.min.js" type="text/javascript"></script>
@@ -181,6 +181,11 @@
                 border-radius: 50%;
             }
         }
+
+        .context_head img {
+            width: 400px;
+            height: 130px;
+        }
     </style>
 </head>
 <body>
@@ -200,8 +205,7 @@
 <div class="login_main_html">
     <div class="login_context">
         <div class="context_head">
-            <h1>美原图书馆</h1>
-            <h2 class="subtitle">American children's English Library</h2>
+            <img src="../static/img/3.png" alt="">
         </div>
         <div class="context_input">
             <form role="form">
