--- a/static/module/activitycenter.html
+++ b/static/module/activitycenter.html
@@ -43,9 +43,9 @@
     <div class="left-nav">
         <div class="list-group">
             <a href="#" class="list-group-item active" data-activity="1">活动中心</a>
-            <a href="#" class="list-group-item" data-activity="2">加速阅读</a>
-            <a href="#" class="list-group-item" data-activity="3">蓝思阅读</a>
-            <a href="#" class="list-group-item" data-activity="4">知识分享</a>
+            <a href="#" class="list-group-item" data-activity="2">AR阅读知识</a>
+            <a href="#" class="list-group-item" data-activity="3">蓝思阅读知识</a>
+            <a href="#" class="list-group-item" data-activity="4">阅读课程</a>
             <a href="#" class="list-group-item" data-activity="5">加入我们</a>
             <a href="#" class="list-group-item" data-activity="6">常见问题</a>
             <a href="#" class="list-group-item" data-activity="7">合作伙伴</a>
