--- a/static/module/bookmanage.html
+++ b/static/module/bookmanage.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-1">
-                        <img id="book-img" src=""  width="100px" height="120px">
+                        <img id="book-img" src="../img/timg.jpg"  width="100px" height="120px">
                     </div>
                     <div class="col-sm-11" id="img-dention">
                         <label class="col-sm-1 control-label">书名</label>
